--- a/webCrypto/index.html
+++ b/webCrypto/index.html
@@ -41,7 +41,7 @@
                 <div class="masthead-subheading">Karla Alejandra Gracia Barajas</div>
                 <div class="masthead-subheading">Estudiante de Ingeniería en Sistemas Computacionales</div>
                 <a class="btn btn-link btn-xl text-uppercase js-scroll-trigger" href="cv/CV_Alejandra_Gracia.pdf" download="CV Alejandra Gracia" target="_blank"><img class="masthead-icon mb-icon" src="assets/img/cv.svg" alt="..." />  Mi CV</a>
-                <a class="btn btn-link btn-xl text-uppercase js-scroll-trigger" href="pk/kagb_key_pub.pem" download="kagb_key_pub" target="_blank"><img class="masthead-icon mb-icon" src="assets/img/keywords.svg" alt="..." />  Mi llave Pública</a>
+                <a class="btn btn-link btn-xl text-uppercase js-scroll-trigger" href="pk/kagb_key_pub.pem" download="kagb_key_pub.pem" target="_blank"><img class="masthead-icon mb-icon" src="assets/img/keywords.svg" alt="..." />  Mi llave Pública</a>
             </div>
         </header>
         <!-- Services-->
